Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.8.0-rc
-
None
-
c264c0d2137d15ec3746ed0f3bd80f225671b4a6
Description
- Create a GUI project.
- In the *.ui file displayed in the Design mode, click "Go to slot..." from the context menu of the form and select a signal.
- The error: "No documents matching 'ui_mainwindow.h' could be found.
Rebuilding the project might help." is displayed in a pop up.
This is a regression from 2.7.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-9653 Code completion for ui doesn't work
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-9683 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
60033,2 | Designer: "Go to slot...": Check all includes in file | 2.8 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
60200,3 | C++: Fix resolving ui_* files in CppPreprocessor | 2.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |